update RE to gamma, add more adaptive runs

--- a/jags/run_IPM.Rmd
+++ b/jags/run_IPM.Rmd
@@ -71,6 +71,7 @@ nherd <- nrow(hn)
 hd <- hd%>%
   left_join(ecotype, by="herd")
 hd$demog_grp <- hd$ECCC%>%factor%>%as.numeric() 
+hd[hd$herd%in%c("Charlotte Alplands","Itcha-Ilgachuz","Rainbows"),"demog_grp"]<-4
 nsight_grp <- length(unique(hd$sight_grp))
 ndemog_grp <- length(unique(hd$demog_grp))
 
@@ -498,9 +499,9 @@ for(h in 1:nherd) {
 
 ipm_inits <- function(){ 
   list(
-    N = Nst,
-		meanS = runif(1, 0.5, 0.9),
-		meanR = runif(1, 0.1, 0.6)
+    N = Nst
+		# meanS = runif(1, 0.5, 0.9),
+		# meanR = runif(1, 0.1, 0.6)
 	)
 }
 
@@ -549,10 +550,10 @@ model_parms <- c(
 ## Run IPM
 ```{r Run IPM, results='hide', message=FALSE, warning=FALSE, eval=FALSE}
 nth <- 90
-nbu <- 35000 
+nbu <- 30000 
 nch <- 3
-nad <- 15000
-nit <- 500000 
+nad <- 60000
+nit <- 400000 
 
 # nth <- 10
 # nbu <- 2000
@@ -563,17 +564,21 @@ nit <- 500000
 out <- jagsUI::jags(ipm_dat, 
 	inits = ipm_inits,
 	model_parms,
-	model.file = here::here("jags/BCAB_IPM_20230607_SW_cl_JN.txt"),
+	model.file = here::here("jags/BCAB_IPM_20230611.txt"),
 	n.chains = nch,
 	n.cores = nch,
 	n.iter = nit,
 	n.burnin = nbu,
 	n.thin = nth,
 	n.adapt = nad)
+
+
+# Error in setParameters(init.values[[i]], i) : Error in node meanR
+# Cannot set value of non-variable node
 ```
 
 ## Save outputs
 ```{r Save outputs, results='hide', message=FALSE, warning=FALSE, eval=FALSE}
 #mcmcplots::mcmcplot(out$samples, par = c("S", "R", "totNMF")) 
-saveRDS(out, file = here::here("jags/output/BCAB_CaribouIPM_posteriors_08072023.rds"))
+saveRDS(out, file = here::here("jags/output/BCAB_CaribouIPM_posteriors_2023_06_13_breakouticha_JNgammaedits.rds"))
 ```
