update figures to journal DPI and fix map legend

--- a/CaribouIPM_BCAB.Rmd
+++ b/CaribouIPM_BCAB.Rmd
@@ -487,7 +487,7 @@ ggplot() +
   coord_cartesian(clip = "off")
 
 
-ggsave(here::here("plots", "abundance.png"), width = 15, height = 11, bg = "white")
+ggsave(here::here("plots", "abundance.png"), width = 15, height = 11, bg = "white", dpi=600)
 
 # #for Fuse
 # library(Cairo)
@@ -597,7 +597,7 @@ ggplot() +
   coord_cartesian(clip = "off")
 
 
-ggsave(here::here("plots", "abundance_top.png"), width = 15, height = 8, bg = "white")
+ggsave(here::here("plots", "abundance_top.png"), width = 15, height = 8, bg = "white", dpi=600)
 
 
 
@@ -700,7 +700,7 @@ ggplot() +
   coord_cartesian(clip = "off")
 
 
-ggsave(here::here("plots", "abundance_bottom.png"), width = 9, height = 6, bg = "white")
+ggsave(here::here("plots", "abundance_bottom.png"), width = 9, height = 6, bg = "white", dpi=600)
 
 
 
@@ -769,7 +769,7 @@ ggplot() +
   coord_cartesian(clip = "off")
 
 
-ggsave(here::here("plots", "abundance_legend.png"), width = 2.7, height = 3, bg = "transparent")
+ggsave(here::here("plots", "abundance_legend.png"), width = 2.7, height = 3, bg = "transparent", dpi=600)
 ```
 
 ## Plot Abundance across Herds
@@ -901,7 +901,7 @@ abundance.all.plot <- ggplot(data = sims.plot %>%
   geom_text(data = raw.demog %>% group_by(year) %>% summarise(n = n_distinct(herd)) %>% filter(year %% 2 == 0), aes(x = year, y = 11800, label = n), size = 3.5)
 abundance.all.plot
 
-ggsave(plot = abundance.all.plot, here::here("plots", "abundance_all.png"), width = 6, height = 6, bg = "white")
+ggsave(plot = abundance.all.plot, here::here("plots", "abundance_all.png"), width = 6, height = 6, bg = "white", dpi=600)
 ```
 
 
@@ -1018,7 +1018,7 @@ demog.draws.combotreat %>%
   geom_density_ridges( # scale = 1.5,
     # scale = 1.3,
     rel_min_height = .01,
-    size = 0.25,
+    size = 0.15,
     alpha = 0.9
   ) +
   theme_ipsum() +
@@ -1028,29 +1028,35 @@ demog.draws.combotreat %>%
       left_join(label.lookup, by = "trt") %>%
       filter(trt != "transplant"),
     aes(y = fct_reorder(new, med), x = r),
-    shape = "|"
+    shape = "|",
+    size=0.8
   ) +
   theme(
-    axis.title.x = element_text(size = 15),
-    axis.title.y = element_text(size = 15),
-    strip.text.x = element_text(size = 15),
-    strip.text.y = element_text(size = 15),
-    legend.text = element_text(size = 13),
-    legend.title = element_text(size = 15),
-    legend.position = "none"
+    axis.title.x = element_text(size = 7),
+    axis.title.y = element_text(size = 7),
+    axis.text.x = element_text(size = 6),
+    axis.text.y = element_text(size = 6),
+    strip.text.x = element_text(size = 6),
+    strip.text.y = element_text(size = 6),
+    legend.text = element_text(size = 7),
+    legend.title = element_text(size = 7),
+    legend.position = "none",
+    plot.title = element_text(size = 7),
+    panel.grid.minor=element_line(linewidth = 0.1),
+    panel.grid.major=element_line(linewidth = 0.1),
   ) +
-  geom_vline(xintercept = 0, linetype = "dashed") +
+  geom_vline(xintercept = 0, linetype = "dashed", size=0.3, alpha=0.8) +
   labs(
     x = "Instantaneous rate of increase (r)",
     y = "Recovery action(s)",
     fill = "",
-    title = "Instantaneous Rate of Increase by Recovery Action"
+    title = "Population Growth by Recovery Action"
   ) +
   scale_fill_manual(values = cols[c(3, 1)]) +
   xlim(-0.25, 0.3)
 
-ggsave(here::here("plots", "lambda_treatments.png"), width = 8, height = 7, bg = "white")
-
+#ggsave(here::here("plots", "lambda_treatments.png"), width = 8, height = 7, bg = "white", dpi=600)
+ggsave(here::here("plots", "final","Fig3.tiff"), width = 8.5, height = 8, bg = "white", units="cm", dpi=600)
 
 
 lambda.table <- demog.draws.combotreat %>%
@@ -1132,7 +1138,7 @@ ggplot() +
     aes(x = delta, y = trt.label, fill = name),
     scale = .9,
     rel_min_height = .01,
-    size = 0.25,
+    size = 0.15,
     alpha = 0.9
   ) +
   geom_point(
@@ -1146,19 +1152,23 @@ ggplot() +
   theme_ipsum() +
   facet_wrap(vars(name)) +
   theme(
-    axis.title.x = element_text(size = 15),
-    axis.title.y = element_text(size = 15),
-    strip.text.x = element_text(size = 15),
-    strip.text.y = element_text(size = 15),
-    legend.text = element_text(size = 13),
-    legend.title = element_text(size = 15),
+    axis.title.x = element_text(size = 10),
+    axis.title.y = element_text(size = 10),
+    axis.text.x = element_text(size = 10),
+    axis.text.y = element_text(size = 9),
+    strip.text.x = element_text(size = 10),
+    strip.text.y = element_text(size = 10),
+    legend.text = element_text(size = 10),
+    legend.title = element_text(size = 10),
+     plot.title = element_text(size = 12),
     legend.position = "none"
   ) +
   geom_vline(xintercept = 0, linetype = "dashed") +
   labs(x = "Change in value", y = "Recovery action(s)", title = "Before-After Assessment of Effectivness") +
   scale_fill_manual(values = cols[c(1:3)])
 
-ggsave(here::here("plots", "ba_all.png"), width = 10, height = 7, bg = "white")
+#ggsave(here::here("plots", "ba_all.png"), width = 10, height = 7, bg = "white", dpi=600)
+ggsave(here::here("plots", "final","Fig4.tiff"), width = 18, height = 13, bg = "white", units="cm", dpi=600)
 
 
 trt_eff_ba_table <- eff.draws %>%
@@ -1563,7 +1573,7 @@ recov.sims.plot <- ggplot() +
     size = 4,
     direction = "y",
     xlim = c(year.end + 2, 35),
-    vjust = 2.2,
+    vjust = 2.5,
     segment.size = .7,
     segment.alpha = .5,
     segment.linetype = "dotted",
@@ -1608,7 +1618,7 @@ recov.sims.plot
 
 ## plot individual treatments together
 recov.together <- ind.eff.plot + recov.sims.plot + plot_layout(widths = c(1.3, 1.6))
-ggsave(plot = recov.together, here::here("plots/recov.together.png"), width = 13, height = 6, bg = "white")
+ggsave(plot = recov.together, here::here("plots/recov.together.png"), width = 13, height = 6, bg = "white", dpi=600)
 ```
 
 
@@ -1819,7 +1829,7 @@ map <- ggplot() +
     legend.box.margin = margin(0, 0, 0, 0),
     legend.position = "top"
   ) +
-  # ggsn::scalebar(x.min = 10E4, x.max = 105E4, y.min = -19E4, y.max = 85E4, dist = 150, height = 0.03, dist_unit = "km", transform = FALSE, location = "bottomleft", st.color = "white", st.bottom = FALSE) +
+  ggsn::scalebar(x.min = 10E4, x.max = 105E4, y.min = -19E4, y.max = 85E4, dist = 150, height = 0.03, dist_unit = "km", transform = FALSE, location = "bottomleft", st.color = "white", st.bottom = FALSE) +
   annotation_custom(ggplotGrob(inset), xmin = 65E4, xmax = 108E4, ymin = 52E4, ymax = 85E4) +
   scale_y_continuous(expand = c(0, 0), limits = c(-20E4, 85E4)) +
   scale_x_continuous(expand = c(0, 0), limits = c(5E4, 105E4)) +
@@ -1832,5 +1842,5 @@ map <- ggplot() +
 ## plot together
 map_combo <- map + abundance.all.plot + plot_layout(widths = c(1.7, 1.3))
 map_combo
-ggsave(plot = map_combo, here::here("plots/map.together.png"), width = 12, height = 8, bg = "white")
+ggsave(plot = map_combo, here::here("plots/map.together.png"), width = 12, height = 8, bg = "white", dpi=600)
 ```
